--- a/styles/style.css
+++ b/styles/style.css
@@ -7,3 +7,11 @@ nav ul {
   text-align: right;
   padding-top: 10px;
 }
+
+.welcome {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(2, 75px);
+  text-align: center;
+  padding-top: 5px;
+}
