--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,7 @@ nav ul {
   display: grid;
   flex-direction: row;
   grid-template-rows: 1;
+  grid-template-columns: 4fr 1fr 1fr;
 }
 
 /* Intro Section */
