--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-body {
-    width:100%;
-}
 ul {
     list-style-type: none;
     
@@ -10,9 +7,37 @@ section {
     border-bottom: 1px solid;
     text-align: center;
 }
+nav ul{
+    display: grid;
+}
+nav ul #startrly-logo {
+    grid-column: 1/4;
+}
 
+nav ul #try{
+    grid-column: 4/5;
+}
+nav ul #about{
+    grid-column: 5/6;
+}
+.quote{
+    min-height:5em;
+    max-height:10em;
+    display: flex;
+    flex-flow:column wrap;
+    align-content:center;
+}
+
+#splash {
+    height:70vh;
+    text-align:center;
+}
+
+#splash a {
+    display:block;
+}
 #why {
-    height:10%;
+    max-height:30em;
 }
 
 #why ul{
@@ -70,12 +95,15 @@ section {
     width:10em;
 }
 
-@media only screen and (max-width: 650px) {
+#sponsors {
+    display:flex;
+    flex-flow:column wrap;
+
+}
+/* For mobile */
+@media only screen and (max-width: 640px) {
     #why img {
         display:none;
     }
-    #why li{
-        display:block;
-    } 
 
 }
