--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,68 @@
+body {
+  margin: 40px;
+}
 .main-container {
-  
-
   display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr;
+  width: 1000px;
+  height: auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, auto);
 }
 
-nav {
+.quote {
   display: flex;
   flex-direction: row;
-  
+}
+.quote p {
+  margin-top: 10vh;
+}
+nav ul {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+}
+
+nav ul li {
+  font-size: 1.25vw;
+}
+
+nav ul li:nth-child(2) {
+  grid-column: 7;
+}
+
+.welcome {
+  height: 40vh;
+  display: flex;
+  background: #666;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.why-startrly {
+  height: 50vh
+  display: flex;
+}
+
+.meet-team ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-around;
+}
+.sponsors ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 li {
   list-style: none;
 }
+
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
