--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,7 @@ nav ul {
 
 nav ul li {
   list-style-type: none;
+  font-weight: bold;
 }
 
 .left {
@@ -30,6 +31,7 @@ nav ul li {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-weight: bold;
 }
 
 #site-intro sub {
@@ -43,4 +45,11 @@ nav ul li {
   padding: 10px;
   border-radius: 5px;
   color: black;
+}
+
+section:not(#sponsors):before {
+  content: " ";
+  display: block;
+  border-bottom: 2px solid darkgray;
+  margin: 0 10px 0 10px;
 }
