--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,6 @@ body {
     border: 2px solid blue;
     display: flex;
     flex-wrap: wrap; 
-    
 }
 
 nav ul {
@@ -17,19 +16,50 @@ nav ul {
 
 nav li:first-child {
     width: 40vw;
-    background-color: green; 
+    /* background-color: green;  */
     display: inline-block;
 } 
 
 nav li:nth-child(2) {
     width: 15vw;
-    background-color: lightgreen; 
+    /* background-color: lightgreen;  */
     display: inline-block;
 }
 
 nav li:last-child {
     width: 15vw;
-    background-color: lightblue; 
+    /* background-color: lightblue;  */
     display: inline-block;
 }  
 
+section:first-of-type > h1 {
+    width: 75vw;
+    text-align: center;
+ 
+} 
+
+section:first-of-type > sub {
+    width: 75vw;
+    height: 5vw;
+    display: inline-block;
+    text-align: center;
+    vertical-align: center;
+    font-size: 150%;
+    font-weight: bold;
+}
+
+section:first-of-type > a {
+    /* make this a grid and put this content in center box? */
+    width: 75vw;
+    height: 5vw;
+    vertical-align: center;
+    text-align: center;
+    display: inline-block;
+    border: 2px solid lightgrey;
+    border-radius: 20px;
+    text-decoration: none;
+    padding: 2px 1px 0;
+    font-size: 125%;
+   
+ 
+}
