--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,10 @@
 
 nav {
-  background-color: dodgerblue;
-  color: white;
+  background-color:;
+  color:;
   position: sticky;
   top: 0;
   z-index: 1;
-}
-
-nav li {
-  text-shadow: 0px 0px 3px black;
 }
 
 nav ul {
@@ -31,3 +27,11 @@ nav li:nth-child(2) {
   grid-column-start: 4;
 }
 
+.intro {
+  grid-row-start: 2;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-image: ;
+  color: ;
+}
