--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.25em;
 }
 
 .site-container {
@@ -52,4 +53,32 @@ section:not(#sponsors):before {
   display: block;
   border-bottom: 2px solid darkgray;
   margin: 0 10px 0 10px;
+}
+
+.quote {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-style: italic;
+}
+
+blockquote {
+  margin: 0 10%;
+}
+
+blockquote:before, blockquote:after {
+  content: open-quote;
+}
+
+blockquote:after {
+  content: close-quote;
+}
+
+blockquote + p {
+  text-align: right;
+  padding-right: 5%;
+}
+
+.author:before {
+  content: "--"
 }
