--- a/styles/style.css
+++ b/styles/style.css
@@ -35,3 +35,30 @@ nav li:nth-child(2) {
   background-image: ;
   color: ;
 }
+
+.intro h1 {
+  width: 200px;
+  padding-top: 50px;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  flex-direction: row;
+}
+
+.intro h1:hover {
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  animation-name: logo;
+  animation-duration: .5s;
+  animation-fill-mode: forwards;
+}
+
+.intro sub {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 42px;
+  font-size: 1.5em;
+  font-weight: 500;
+}
