--- a/styles/style.css
+++ b/styles/style.css
@@ -117,6 +117,18 @@ nav li:nth-child(2) {
   grid-template-columns: 114px 1fr;
 }
 
+.why li strong {
+  grid-column-start: 2;
+  grid-row-start: 1;
+  display: block;
+}
+
+.why li p {
+  grid-column-start: 2;
+  grid-row-start: 2;
+  display: block;
+}
+
 .quote {
   grid-row-start: 3;
   border-top: ;
