--- a/styles/style.css
+++ b/styles/style.css
@@ -260,3 +260,15 @@ blockquote + p::before {
   margin: 10px;
 }
 
+
+.footer {
+  grid-row-start: 8;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-top: 20px;
+}
+
+.footer ul {
+  list-style: none;
+}
