--- a/index.css
+++ b/index.css
@@ -1,37 +1,72 @@
-/* .main-container {
+.main-container {
   display: grid;
   grid-template-rows: auto;
-} */
+}
 
+section {
+  padding: 2em;
+}
+
+h2 {
+  font-size: 2em;
+  text-align: center;
+}
 .tagline {
   background: aquamarine;
   display: grid;
-
-  grid-template-rows: 35% 1fr 1fr 1fr ;
-  font-size: 1.5em
-
-
+  align-items: center;
+  /* justify-content: center; */
+  /* flex-direction: column; */
+  grid-template-rows: 35% 1fr 1fr ;
+  font-size: 1.6em
+}
+.tagline * {
+  justify-self: center;
 }
 .tagline h1 {
   font-size: 2em;
   grid-row: 1;
-  justify-self: center;
-  padding: 8px
 }
 
 .tagline sub {
   grid-row: 2;
-  justify-self: center
-
-
 }
 .tagline a {
   grid-row: 3;
-  justify-self: center;
+  display: block;
   border-radius: 15px;
   border: 3px solid;
   padding: 8px;
   border-color: black
-
 }
+
+.quote {
+  display: grid;
+  align-items: center;
+  background-color: beige;
+}
+
+blockquote {
+  font-style: italic
+}
+
+.quote p {
+  text-align: right
+}
+
+.why .flexbox {
+  display: flex;
+  flex-direction: row;
+  align-content: space-around
+}
+
+.why .flexbox li {
+  max-width: 33%;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  /* display: inline-block; */
+}
+
+
 
