--- a/index.css
+++ b/index.css
@@ -32,6 +32,7 @@ h2 {
   grid-row: 2;
 }
 .tagline a {
+  text-decoration: none;
   grid-row: 3;
   display: block;
   border-radius: 15px;
@@ -63,10 +64,24 @@ blockquote {
 .why .flexbox li {
   max-width: 33%;
   list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  /* display: inline-block; */
+
+  /* display: flex; */
+
+  /* display: grid; 
+  grid-template-rows: 35px 1fr;
+  grid-template-columns: 110px 1fr; */
+
+}
+.why .flexbox li > * {
+  padding: .5em
 }
 
+.why .flexbox img {
+  float: left;
+}
 
+/* .why .flexbox li:first-child {
+  grid-row: 1;
+  grid-column: 1
+} */
 
