--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,116 @@
 ul {
     list-style-type: none;
-    
+    padding-inline-start: 0px;
+
+}
+li {
+    text-align:center;
 }
 
 section {
     border-bottom: 1px solid;
     text-align: center;
 }
-nav ul{
-    display: grid;
+body {
+    background-color: #1C3144;
+    font-family: "Libre Baskerville";
+    color: #F2CD60;
 }
-nav ul #startrly-logo {
-    grid-column: 1/4;
+nav ul {
+    display: grid;
+    font-family: 'Amatic SC', cursive;
+    font-size: 2em;
 }
 
-nav ul #try{
-    grid-column: 4/5;
+nav li:hover {
+    color:white
 }
-nav ul #about{
-    grid-column: 5/6;
+
+nav ul #startrly-logo {
+    grid-column: 1/2;
 }
-.quote{
-    min-height:5em;
-    max-height:10em;
-    display: flex;
-    flex-flow:column wrap;
-    align-content:center;
+
+nav ul #try {
+    grid-column: 7/8;
 }
+nav ul #about {
+    grid-column: 8/9;
+}
+
+h1, h2, h3 {
+    font-family: 'Amatic SC', cursive;
+}
+
+h1 {
+    font-size: 4em;
+}
+
+h2 {
+    font-size: 3em;
+}
+
+h3 {
+    font-size: 2em;
+}
+ 
+#startrly-logo, #try, #about {
+    text-align: center;
+}
+
+
+
+
 
 #splash {
     height:70vh;
-    text-align:center;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    background-color: #F6F09B;
+    color: #1C3144;
+    font-family: 'Amatic SC', cursive;
+    
+}
+
+#splash h1  {
+    font-size: 5em;
+    margin: .5em;
+}
+
+#splash sub  {
+    font-size: 2em;
 }
 
 #splash a {
     display:block;
-}
-#why {
-    max-height:30em;
+    text-decoration:none;
+    padding: 1em;
+    width:200px;
+    margin: 3em auto;
+    border: 2px solid;
+    border-radius: 40%;
+    font-size: 2em;
+    color: #1C3144;
 }
 
-#why ul{
+.startrly-name:before {
+    content : "🌠"
+}
+.quote{
+    height:30vh;
+    text-align:center;
+    vertical-align: middle;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+#why {
+    max-height:30rem;
+}
+
+#why ul {
     display:flex;
     justify-content:space-around;
     flex-flow:row wrap;
@@ -48,7 +118,6 @@ nav ul #about{
 }
 
 #why li {
-    min-width:250px;
     max-width:300px;
     display:grid;
     justify-content: center ;
@@ -57,8 +126,8 @@ nav ul #about{
 #why img {
     grid-row:1/5;
     grid-column:1/3;
-    margin-left:1em;
-    margin-right:1em;
+    margin-left:1rem;
+    margin-right:1rem;
 }
 
 #why strong {
@@ -73,11 +142,9 @@ nav ul #about{
     grid-column: 3/5;
     grid-row: 2/5;
 }
-#team {
-    height:20%;
-}
 
-#team ul{
+
+#team ul {
     display:flex;
     flex-flow: row wrap;
     justify-content:center;
@@ -87,23 +154,42 @@ nav ul #about{
     display:block;
 }
 
+#team li {
+    display: block;
+    margin: 10px;
+}
+
+
 [alt*="profile"] {
     border-radius:50%;
-    margin-left:8em;
-    margin-right:8em;
-    height:10em;
-    width:10em;
+    margin-left:2rem;
+    margin-right:2rem;
+    height:6rem;
+    width:6rem;
 }
 
-#sponsors {
+#sponsors ul {
+    display: -webkit-flex;
     display:flex;
-    flex-flow:column wrap;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-content: center;
+    max-width:100vw;
 
 }
+
+
+#sponsors img {
+    padding:1%;
+}
+
+
+
+
 /* For mobile */
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 600px) {
     #why img {
-        display:none;
+        display: none;
     }
 
 }
