--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,73 @@
-*{
-  color: purple;
-  background-color: aqua;
+/* div {
+display: flex;
+flex-direction: row;
+flex-flow:  row wrap;
+} */
+
+/* Style top row */
+.nav_row {
+display: grid;
+grid-template: 100px / 1fr 1fr 1fr 1fr 1fr
+} 
+
+.nav_elem_2 {
+  grid-column-start: 4;
+} 
+
+.nav_elem_3 {
+  grid-column-start: 5;
+} 
+
+.nav_row  {
+  list-style-type: none;
 }
+
+.nav_row li {
+  text-align: left;
+}
+
+/* Style title header */
+.header {
+  display: grid;
+  grid-template: 3fr 1fr 1fr 1fr / 1fr;
+  text-align: center;
+} 
+
+.title{
+
+}
+
+.tagline{
+
+}
+
+.taglink{
+
+}
+
+/* Style quote x2*/
+.quote_block {
+  border-bottom-style: solid;
+  border-top-style: solid;
+  display: grid;
+  grid-template: 1fr 1fr / 100px 1fr repeat(5, 25px) 50px;
+}
+
+.quote {
+  grid-row-start: 1;
+  grid-column: 2 / -4;
+}
+
+.quote_author {
+  grid-row-start: 2;
+  grid-column: 4 / -3;
+}
+
+/* style h2 (section headers) x3 */
+.section_header {
+  text-align: center;
+} 
+
+/* style why-box section */
+
+
