--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@keyframes fade-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 ul {
     list-style-type: none;
     padding-inline-start: 0px;
@@ -8,23 +13,43 @@ li {
 }
 
 section {
-    border-bottom: 1px solid;
     text-align: center;
 }
 body {
-    background-color: #1C3144;
-    font-family: "Libre Baskerville";
+    margin-top: 6em;
+    background-color: #1C3150;
     color: #F2CD60;
 }
+
+p {
+    font-family: monospace;
+    font-size:14px;
+}
+nav {
+    background-color: #1C3150;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; 
+    z-index: +1 ;
+    width:100%;
+    height:/* Position the navbar at the top of the page */
+}
+
 nav ul {
     display: grid;
     font-family: 'Amatic SC', cursive;
     font-size: 2em;
+    box-shadow: 0px 4px rgba(0, 0, 0, .5);
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding: 1em 0;
+    
 }
 
 nav li:hover {
     color:white
 }
+
+
 
 nav ul #startrly-logo {
     grid-column: 1/2;
@@ -37,12 +62,16 @@ nav ul #about {
     grid-column: 8/9;
 }
 
+.startrly-name:before{
+    content:"🌟"
+}
 h1, h2, h3 {
     font-family: 'Amatic SC', cursive;
 }
 
 h1 {
     font-size: 4em;
+    animation: fade-in 2s;
 }
 
 h2 {
@@ -52,7 +81,20 @@ h2 {
 h3 {
     font-size: 2em;
 }
+
+.section-header:hover:before, .section-header:hover:after  {
+    content:"⭐"
+}
+.parallax { 
+    background-image: url("star-background.jpg");
+    height: 500px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
  
+
 #startrly-logo, #try, #about {
     text-align: center;
 }
@@ -60,15 +102,16 @@ h3 {
 
 
 
-
 #splash {
+    background-color: rgba(255, 255, 255, .5);
     height:70vh;
+    padding: 2em 0;
     display:flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-content: center;
-    background-color: #F6F09B;
-    color: #1C3144;
+    color: #F6F09B;
+    text-shadow: 2px 2px 4px #000000;
     font-family: 'Amatic SC', cursive;
     
 }
@@ -85,26 +128,35 @@ h3 {
 #splash a {
     display:block;
     text-decoration:none;
+    text-shadow: none;
     padding: 1em;
     width:200px;
     margin: 3em auto;
     border: 2px solid;
+    background-color: #F6F09B;
+    box-shadow: 1px 2px 4px 4px rgba(0, 0, 0, .5);
     border-radius: 40%;
     font-size: 2em;
     color: #1C3144;
 }
 
-.startrly-name:before {
-    content : "🌠"
+#splash a:hover {
+    box-shadow: inset 1px 1px 1px 1px rgba(0, 0, 0, .5);
 }
+
 .quote{
-    height:30vh;
+    max-height:12em;
     text-align:center;
     vertical-align: middle;
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    box-shadow: 1px 2px 4px 4px rgba(0, 0, 0, .5);
+    background-color: #F6F09B;
+    color: #1C3144;
+    font-family: 'Amatic SC', cursive;
+    font-size:2em;
 }
 #why {
     max-height:30rem;
@@ -148,6 +200,8 @@ h3 {
     display:flex;
     flex-flow: row wrap;
     justify-content:center;
+    max-width:900px;
+    margin:auto;
 }
 
 #team span {
@@ -162,10 +216,7 @@ h3 {
 
 [alt*="profile"] {
     border-radius:50%;
-    margin-left:2rem;
-    margin-right:2rem;
-    height:6rem;
-    width:6rem;
+    margin:0 2em;
 }
 
 #sponsors ul {
@@ -174,13 +225,14 @@ h3 {
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-content: center;
-    max-width:100vw;
+    max-width:1200px;
+    margin:auto;
 
 }
 
 
 #sponsors img {
-    padding:1%;
+    margin: 20% .2em;
 }
 
 
@@ -192,4 +244,7 @@ h3 {
         display: none;
     }
 
+   
+
 }
+
