--- a/styles.css
+++ b/styles.css
@@ -27,18 +27,17 @@ p {
 }
 nav {
     background-color: #1C3150;
-    position: fixed; /* Set the navbar to fixed position */
+    position: fixed; 
     top: 0; 
     z-index: +1 ;
     width:100%;
-    height:/* Position the navbar at the top of the page */
+    box-shadow: 0px 4px rgba(0, 0, 0, .5);
 }
 
 nav ul {
     display: grid;
     font-family: 'Amatic SC', cursive;
     font-size: 2em;
-    box-shadow: 0px 4px rgba(0, 0, 0, .5);
     margin-block-start: 0;
     margin-block-end: 0;
     padding: 1em 0;
@@ -111,7 +110,7 @@ h3 {
     justify-content: space-around;
     align-content: center;
     color: #F6F09B;
-    text-shadow: 2px 2px 4px #000000;
+    text-shadow: 4px 4px 4px #000000;
     font-family: 'Amatic SC', cursive;
     
 }
@@ -123,6 +122,8 @@ h3 {
 
 #splash sub  {
     font-size: 2em;
+    text-shadow: 2px 2px 4px #000000;
+
 }
 
 #splash a {
@@ -137,7 +138,7 @@ h3 {
     box-shadow: 1px 2px 4px 4px rgba(0, 0, 0, .5);
     border-radius: 40%;
     font-size: 2em;
-    color: #1C3144;
+    color: #1C3150;
 }
 
 #splash a:hover {
@@ -219,6 +220,7 @@ h3 {
     margin:0 2em;
 }
 
+
 #sponsors ul {
     display: -webkit-flex;
     display:flex;
@@ -235,7 +237,26 @@ h3 {
     margin: 20% .2em;
 }
 
+#footer {
+    box-shadow: 0px 4px rgba(0, 0, 0, .5);
+    background-color:  #F2CD60;
+    color: #1C3150;
+    padding: 1em 1em;
+    display:flex;
+    flex-flow:row wrap;
+    justify-content: flex-start;
+    align-content: center;
+}
 
+.footer-links {
+    margin: 0 100px;
+    font-family: monospace;
+    font-size:1em;
+}
+
+.footer-links li:hover{
+    color:white;
+}
 
 
 /* For mobile */
@@ -244,7 +265,9 @@ h3 {
         display: none;
     }
 
-   
+   #footer {
+    justify-content: center;
+   }
 
 }
 
