--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,11 @@ h3 {
     content:"⭐"
 }
 .parallax { 
-    background-image: url("star-background.jpg");
+    background-image:     
+        linear-gradient(
+        rgba(0, 0, 0, 0.4), 
+        rgba(0, 0, 0, 0.4)
+      ),url("star-background.jpg");
     height: 500px; 
     background-attachment: fixed;
     background-position: center;
@@ -102,8 +106,8 @@ h3 {
 
 
 #splash {
-    background-color: rgba(255, 255, 255, .5);
     height:70vh;
+    min-height:450px;
     padding: 2em 0;
     display:flex;
     flex-direction: column;
