--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,8 @@ nav {
   position: sticky;
   top: 0;
   z-index: 1;
+  border-bottom: solid black;
+  border-bottom-width: .05em;
 }
 
 nav ul {
@@ -31,6 +33,9 @@ nav li:nth-child(2) {
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 5em;
+  border-bottom: solid black;
+  border-bottom-width: .05em;
 }
 
 .intro h1 {
@@ -136,7 +141,10 @@ nav li:nth-child(2) {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: linear-gradient()
+  padding-top: 3em;
+  padding-bottom: 3em;
+  border-bottom: solid black;
+  border-bottom-width: .05em;
 }
 
 blockquote {
@@ -181,6 +189,10 @@ blockquote + p::before {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-top: 3em;
+  padding-bottom: 3em;
+  border-bottom: solid black;
+  border-bottom-width: .05em;
 }
 
 .team {
@@ -264,6 +276,9 @@ blockquote + p::before {
   flex-direction: row;
   justify-content: flex-start;
   margin-top: 20px;
+  padding-top: 2em;
+  border-top: solid black;
+  border-top-width: .05em;
 }
 
 .footer ul {
