--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,62 @@
-@keyframes fade-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-ul {
-    list-style-type: none;
-    padding-inline-start: 0px;
-
-}
-li {
-    text-align:center;
-}
-
-section {
-    text-align: center;
-}
 body {
     margin-top: 6em;
     background-color: #1C3150;
     color: #F2CD60;
 }
 
+section {
+    text-align: center;
+}
+ul {
+    list-style-type: none;
+    padding-inline-start: 0px;
+
+}
+
+
+
+h1, h2, h3 {
+    font-family: 'Amatic SC', cursive;
+}
+
+h1 {
+    font-size: 4em;
+    
+}
+
+h2 {
+    font-size: 3em;
+}
+
+h3 {
+    font-size: 2em;
+}
+
 p {
     font-family: monospace;
     font-size:14px;
 }
+
+.section-header:hover:before, .section-header:hover:after  {
+    content:"⭐";
+}
+.parallax { 
+    background-image:     
+        linear-gradient(
+        rgba(0, 0, 0, 0.4), 
+        rgba(0, 0, 0, 0.4)
+      ),url("star-background.jpg");
+    height: 500px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+
+
+/* NAVIGATION */
+
 nav {
     background-color: #1C3150;
     position: fixed; 
@@ -48,8 +80,6 @@ nav li:hover {
     color:white
 }
 
-
-
 nav ul #startrly-logo {
     grid-column: 1/2;
 }
@@ -61,42 +91,9 @@ nav ul #about {
     grid-column: 8/9;
 }
 
-.startrly-name:before{
+nav .startrly-name:before, #splash .startrly-name:before{
     content:"🌟"
 }
-h1, h2, h3 {
-    font-family: 'Amatic SC', cursive;
-}
-
-h1 {
-    font-size: 4em;
-    animation: fade-in 2s;
-}
-
-h2 {
-    font-size: 3em;
-}
-
-h3 {
-    font-size: 2em;
-}
-
-.section-header:hover:before, .section-header:hover:after  {
-    content:"⭐"
-}
-.parallax { 
-    background-image:     
-        linear-gradient(
-        rgba(0, 0, 0, 0.4), 
-        rgba(0, 0, 0, 0.4)
-      ),url("star-background.jpg");
-    height: 500px; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
- 
 
 #startrly-logo, #try, #about {
     text-align: center;
@@ -104,7 +101,7 @@ h3 {
 
 
 
-
+/* SPLASH */
 #splash {
     height:70vh;
     min-height:450px;
@@ -116,7 +113,7 @@ h3 {
     color: #F6F09B;
     text-shadow: 4px 4px 4px #000000;
     font-family: 'Amatic SC', cursive;
-    
+    animation: fade-in 2s;
 }
 
 #splash h1  {
@@ -127,7 +124,7 @@ h3 {
 #splash sub  {
     font-size: 2em;
     text-shadow: 2px 2px 4px #000000;
-
+    color: #F2CD60;
 }
 
 #splash a {
@@ -138,7 +135,7 @@ h3 {
     width:200px;
     margin: 3em auto;
     border: 2px solid;
-    background-color: #F6F09B;
+    background-color: #F2CD60;
     box-shadow: 1px 2px 4px 4px rgba(0, 0, 0, .5);
     border-radius: 40%;
     font-size: 2em;
@@ -149,10 +146,12 @@ h3 {
     box-shadow: inset 1px 1px 1px 1px rgba(0, 0, 0, .5);
 }
 
-.quote{
+/* QUOTE */
+
+.quote {
+    padding: 1em 1em;
     max-height:12em;
     text-align:center;
-    vertical-align: middle;
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -163,6 +162,20 @@ h3 {
     font-family: 'Amatic SC', cursive;
     font-size:2em;
 }
+.quote p {
+    align-self:flex-end;
+    padding: 0 4em;
+}
+.quote p:before {
+    content: "-- "
+}
+
+blockquote:before, blockquote:after {
+    content: '"';
+}
+
+/* WHY */
+
 #why {
     max-height:30rem;
 }
@@ -200,6 +213,7 @@ h3 {
     grid-row: 2/5;
 }
 
+/* TEAM */
 
 #team ul {
     display:flex;
@@ -219,11 +233,13 @@ h3 {
 }
 
 
-[alt*="profile"] {
+ [alt*="profile"] {
     border-radius:50%;
     margin:0 2em;
 }
 
+
+/* SPONSORS */
 
 #sponsors ul {
     display: -webkit-flex;
@@ -241,8 +257,10 @@ h3 {
     margin: 20% .2em;
 }
 
+/* FOOTER */
+
 #footer {
-    box-shadow: 0px 4px rgba(0, 0, 0, .5);
+    box-shadow: inset 0px 4px rgba(0, 0, 0, .5);
     background-color:  #F2CD60;
     color: #1C3150;
     padding: 1em 1em;
