--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
+  background-color: #CDD6DD;
 }
 
 .container {
@@ -9,31 +10,103 @@
   flex-flow: column wrap;
   width: 80%;
   justify-content: center;
-  background-color: red;
+  background-color: #CD8987;
+  padding-top: 2em;
 }
 
 nav ul {
+  background-color: #CDCACC;
   display: grid;
   grid-template-columns: 70% 15% 15%;
   font-weight: bold;
+  font-family: Arial, bolder, sans-serif;
+  margin: auto;
   font-size: 1.1em;
 }
 
+.splash {
+  display: grid;
+  grid-template-rows: 50% 20% 30%;
+  max-height: 600px;
+  justify-content: center;
+  padding-bottom: 8em;
+}
+
+h1 {
+  font-size: 5em;
+  line-height: .5em;
+  text-align: center;
+}
+
+.splash sub {
+  height: 2em;
+  font-size: 2em;
+  font-weight: bold;
+  text-transform: capitalize;
+  font-stretch: ultra-expanded;
+}
+
+.splash a[href], a:active {
+  background-color: #CDD6DD;
+  border: 2px solid black;
+  border-radius: 10px;
+  margin: 0em 4.5em 0em 4.5em;
+  line-height: 3em;
+  font-size: 1.7em;
+  vertical-align: middle;
+  text-align: center;
+  text-decoration: none;
+  color: black;
+}
+
 section {
-  margin-top: 5em;
+  margin-top: 2em;
+  padding: 0em 0em 0em 2em;
   border-bottom: 1px solid black;
 }
 
-blockquote + p {
+.quote {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
   font-style: italic;
+  font-size: 2em;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  line-height: 2em;
+  padding-left: 2em;
+}
+
+.quote p:before {
+  content: "--";
+}
+
+.why ul {
+ display: grid;
+ grid-template-areas: "a b c";
+}
+
+.why img[src] {
+  float: left;
+  margin-right: .7em;
+}
+
+.team ul {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.team img[src] {
+  border-radius: 110px;
 }
 
 li {
   list-style-type: none;
 }
 
-/* section:last-of-type div {
-  background-color: red;
+section:last-of-type {
+  background-color: #CDCACC;
+  /* padding: 0em 0em 5em 5em; */
   display: grid;
-  grid-template-columns: 50px 50px 50px 50px;
-} */
+  grid-template-areas: "a b c c"
+  "a b c c";
+  
+}
