--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,10 @@
 body {
   margin: 40px;
+  font-family: 'Oswald', sans-serif;
 }
 .main-container {
   display: grid;
-  width: 1fr;
+  width: 80%;
   height: auto;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(8, auto);
@@ -35,28 +36,42 @@ nav ul li:nth-child(2) {
 .welcome {
   height: 40vh;
   display: flex;
-  background: #666;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
 }
 
+.welcome h1 {
+  font-size: 3em;
+  margin: 0px
+}
+
+.quote {
+  padding: 1em;
+  border-top: 1px solid #333;
+  border-bottom: 1px solid #333;
+}
+
+sub {
+font-size: 1em;
+}
 .why-startrly h2{
   text-align: center;
 }
 
 .why-startrly ul {
   display: grid;
-  grid-template-columns: 30% 30% 30%
+  grid-template-columns: 1fr 1fr 1fr
 }
 
 .why-startrly li {
-  padding: 1em
-  width: 
+  padding: 1em;
+  width: 100%
 }
 
 .why-startrly img {
   float: left;
+  padding-right: 2px
 }
 
 
