--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,3 +86,24 @@ blockquote + p {
 .author:before {
   content: "--"
 }
+
+#why h2 {
+  padding: 2.5% 0;
+  text-align: center;
+}
+
+#why ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#why ul li {
+  list-style-type: none;
+  width: 30%;
+}
+
+#why ul li img {
+  float: left;
+  margin: 0px 10px;
+  vertical-align: top;
+} 
