--- a/styles/main.css
+++ b/styles/main.css
@@ -19,60 +19,105 @@ nav li {
   padding: 1rem;
 }
 
-.container {
-  display: grid;
-  grid-template-rows: 3fr 3fr 3fr;
-  justify-content: center;
-  margin: 0 2%;
+nav ul {
+  display: flex;
 }
 
+/* -----GRID DECLARATIONS----- */
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 20px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+/* nav, footer {
+  grid-column: 1 / 3;
+} */
+/* -----end GRID DECLARATIONS----- */
+
 .container>section {
+  grid-column: 1 / span 3;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 2rem 2rem;
+  margin: 20px;
 }
 
-section ul {
+body {
+  width: 100%;
+}
+
+ul {
+  padding-inline-start: 0px;
   display: flex;
   flex-direction: row;
-  /* align-content: space-around; */
-  justify-content: space-around;
-  margin: 3%;
+  justify-content: space-evenly;
 }
 
-section.why li {
-  display: inline-flex;
+.why li {
+  display: flex;
+  padding: 1rem;
+  width: 33%;
 }
 
-section.welcome a {
+.why img {
+  align-self: flex-start;
+  padding: 16px
+}
+
+a.button {
   border: solid 2px pink;
   border-radius: 2px;
   color: pink;
   padding: 1em 1.5em;
   text-transform: uppercase;
+  text-decoration: none;
 }
 
-section.team ul {
+.welcome a:hover {
+  
+}
+
+.team ul {
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   align-items: center;
   justify-content: center
 }
 
-section.team li {
-  flex-direction: column;
-  
+.team li {
+  flex-flow: column wrap;
   width: 33%;
   margin-top: 2rem;
   margin-bottom: 2rem;
   text-align: center
 }
 
-section.team img {
+.team img {
   border-radius: 100%;
   border: 6px solid pink;
 }
 
+.testimonial {
+  padding: 1rem 6rem;
+}
+
+.testimonial p {
+  align-self: flex-end;
+  font-style: italic;
+  font-family: 'Noto Serif', serif;
+  font-size: 1rem;
+  line-height: 150%;
+}
+
+blockquote {
+  font-style: italic;
+  font-family: 'Noto Serif', serif;
+  font-size: 1.5rem;
+  line-height: 150%;
+}
 
