--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 /* General Styling */
 html {
-	font-family: 'Nunito', Georgia, Times, serif;
+  font-family: 'Nunito', Georgia, Times, serif;
 }
 
 h1, h2, h3 {
@@ -17,6 +17,10 @@ a:hover {
 
 ul {
   list-style: none;
+}
+
+section {
+  margin: 3em;
 }
 
 /* Divider Line */
@@ -91,20 +95,42 @@ blockquote::before, blockquote::after {
 .team ul {
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
+  padding: 1em;
 }
 
 .team img {
   display: block;
   border-radius: 50%;
+  margin: 1em 7em;
+}
+
+.team span {
+  display: block;
 }
 
 /* Sponsors Section */
 .sponsors ul {
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
+  padding: .5em;
+}
+
+.sponsors li {
+  align-self: center;
+  margin: .5em;
 }
 
 /* Footer Section */
 .footer {
+  display: flex;
+}
 
+.footer div {
+  padding: 0 10em 0 2em;
+}
+
+.footer ul {
+  padding-left: 0;
 }
