--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,7 +60,6 @@ sub {
 
 /* Quote Section */
 .quote {
-  width: 90%;
   font-style: italic;
 }
 
@@ -70,6 +69,7 @@ blockquote::before, blockquote::after {
 
 .quote p {
   text-align: end;
+  margin-right: 5em;
 }
 
 .quote p::before {
