--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,3 @@
-body {
-  /* width: 95%; */
-}
-
 li {
   list-style: none;
 }
@@ -103,6 +99,7 @@ h1 {
 
 .why-grid {
   justify-content: center;
+  width: 100%;
   font-family: 'Quicksand', sans-serif;
   height: 20rem;
   display: grid;
@@ -122,30 +119,24 @@ h1 {
 
 .images-container {
   grid-row: 2;
-  margin-right: 13rem;
-  margin-left: 13rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /* background-color: pink; */
-  grid-gap: 4rem;
-}
-
-/* .image-item {
   display: flex;
-  flex-wrap: nowrap;
-  padding: 1em;
-  background-color: aqua;
-} */
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  /* grid-gap: 4rem; */
+}
 
 .image-item {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  width: 300px;
   /* grid-template-rows: 1fr 1fr; */
 }
 
 .image-item img {
   grid-column: 1;
-  grid-row: 1, span 2
+  grid-row: 1 / span 2
 }
 
 .image-item strong {
@@ -159,21 +150,6 @@ h1 {
   grid-column: 2;
   grid-row-start: 1;
 }
-
-
-
-/* .image-item strong {
-  margin-left: 0.5em;
-} */
-
-/* .meet-team-grid {
-  font-family: 'Quicksand', sans-serif;
-  display: grid;
-  grid-template-rows: 1fr 3fr;
-  height: 40rem;
-  width: 70rem;
-  padding-left: 10rem;
-} */
 
 .team-members {
   font-family: 'Quicksand', sans-serif;
@@ -214,22 +190,12 @@ h1 {
   grid-row: 2;
 }
 
-
-/* 
-.team-members {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-content: space-between;
-} */
-
 .team-members span {
   display: block;
   text-align: center;
 }
 
 .team-members li {
-  padding: 4rem;
   list-style: none;
 }
 
@@ -259,10 +225,6 @@ h1 {
   justify-content: space-evenly;
   align-items: center;
 }
-
-/* .sponsors-container li {
-  list-style: none;
-} */
 
 .footer {
   font-family: 'Quicksand', sans-serif;
