--- a/styles/style.css
+++ b/styles/style.css
@@ -2,44 +2,40 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 .container {
-    width: 75vw;
+    width: 100%;
     margin: auto;
     border: 2px solid blue;
     display: flex;
     flex-wrap: wrap; 
+    align-content: center;
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
 }
-
-nav li:first-child {
-    width: 40vw;
-    /* background-color: green;  */
-    display: inline-block;
-} 
-
-nav li:nth-child(2) {
-    width: 15vw;
-    /* background-color: lightgreen;  */
-    display: inline-block;
+nav {
+    width: 100%;
+}
+nav ul {
+    display: grid;
+    grid-template-columns: 70% 15% 15%;
 }
 
-nav li:last-child {
-    width: 15vw;
-    /* background-color: lightblue;  */
-    display: inline-block;
-}  
+nav li {
+    /* background-color: green;  */
+} 
+
 
 section:first-of-type > h1 {
-    width: 75vw;
+    width: 100%;
+    height: 5vw;
     text-align: center;
  
 } 
 
 section:first-of-type > sub {
-    width: 75vw;
+    width: 100%;
     height: 5vw;
     display: inline-block;
     text-align: center;
@@ -49,9 +45,8 @@ section:first-of-type > sub {
 }
 
 section:first-of-type > a {
-    /* make this a grid and put this content in center box? */
-    width: 75vw;
-    height: 5vw;
+    width: 75vw; 
+    height: 5vw; 
     vertical-align: center;
     text-align: center;
     display: inline-block;
@@ -63,3 +58,61 @@ section:first-of-type > a {
    
  
 }
+section:nth-of-type(2) {
+    background-color: lightgreen;
+    width: 75vw;
+}
+
+section:nth-of-type(3) {
+    background-color: lightblue;
+    width: 75vw;
+}
+
+section:nth-of-type(4) {
+    background-color: lightgoldenrodyellow;
+    width: 75vw;
+    
+}
+/* add back meet the team  */
+
+section:nth-of-type(5) {
+    width: 100%;
+    justify-content: center;
+    margin: 100px;
+}
+
+section:nth-of-type(5) h2 {
+    text-align: center;
+}
+
+
+section:nth-of-type(5) ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+section:nth-of-type(5) ul li {
+    display: flex; 
+    flex-direction: column;
+    margin: 25px 50px;
+    text-align: center;
+    line-height: 175%;
+
+}
+
+section:nth-of-type(5) ul li img {
+    border-radius: 50%;
+    border: 3px solid lightgrey;
+}
+
+section:nth-of-type(6) {
+    background-color: lightgrey;
+    width: 75vw;
+}
+
+section:last-child {
+    background-color: hotpink;
+    width: 75vw;
+} */
+
