--- a/style/style.css
+++ b/style/style.css
@@ -1,19 +1,31 @@
 .container {
-    display: grid;
-    grid-template-rows: 6.25% 25% 12.5% 12.5% 12.5% 12.5% 6.25%
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 .nav {
-    grid-row: 1/2;
+    /* grid-row: 1/2; */
     background-color: aquamarine;
 
      
 }
-#navlink {
+.navlink {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: flex-end;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    height: 50px;
+}
+.navlink li {
+  width: 100px;
+  margin: 20px;
+
+
+}
+.nav li.trynow {
+    margin-left: auto;
+    
+    
 }
 
 .content {
@@ -23,3 +35,42 @@
     justify-content:space-evenly;
     align-items:center;
 }
+.content sub {
+    line-height: 3;
+
+}
+.adjustname {
+    margin-left: auto;
+    margin-right: 40px;
+}
+.style-quote {
+    quotes: """ """;
+    width: 60%;
+}
+.style-quote:before {
+    content: open-quote;
+}
+.style-quote:after {
+    content: close-quote;
+}
+/* .why-section ul {
+    display: inline-block;
+
+}
+.why-section li {
+    width: 250px;
+    float: left;
+} */
+
+.why-section ul {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    margin: 0 auto;
+}
+.why-section li {
+    width: 30%;
+
+}
+
+
