--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,18 +77,14 @@ blockquote::before, blockquote::after {
 }
 
 /* Why Section */
-.why ul{
-  display: flex;
-  align-self: center;
-}
-
-.why ul li p, strong{
-  display: flex;
-  flex-direction: column;
+.why ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .why img {
-  display: block;
+  float: left;
+  padding-right: .5em;
 }
 
 /* Team Section */
