--- a/style/style.css
+++ b/style/style.css
@@ -68,9 +68,24 @@
     justify-content:space-between;
     margin: 0 auto;
 }
-.why-section li {
+/* .why-section li {
     width: 30%;
+    display:grid;
+    
 
+} */
+.gridstyle {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-items: space-around;
+    align-items: flex-start;
+    
 }
+.gridstyle div {
+    margin: 10px;
+}
+
+
 
 
