Changed font for <strong>

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@ html {
   font-family: 'Nunito', Georgia, Times, serif;
 }
 
-h1, h2, h3 {
+h1, h2, h3, strong {
 	font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
 }
 
